# Voltaros

./: README.md
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/agents/: chaos_injector.py  monitor.py  reporter.py
backend/src/: api.py  main.py
backend/tools/: chaos_toolkit.yaml
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/docs/: blueprint.md
frontend/src/ai/: dev.ts
frontend/src/ai/flows/: suggest-experiments.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/experiment/: page.tsx
frontend/src/app/experiments/: page.tsx
frontend/src/app/integrations/: page.tsx
frontend/src/app/metrics/: page.tsx
frontend/src/app/reports/: page.tsx
frontend/src/app/suggest/: page.tsx
frontend/src/app/workflows/: page.tsx
frontend/src/components/: ClientLayout.tsx  ThemeToggle.tsx
frontend/src/components/icons/: GcpIcons.tsx  Logo.tsx
frontend/src/components/ui/: button.tsx  card.tsx
frontend/src/context/: AppContext.tsx
